# Gossamer

./: .gitignore  ARCHITECTURE.md  README.md  pubspec.yaml
.github/workflows/: android_build.yml
android/: build.gradle  settings.gradle
lib/: bridge_generated.dart  main.dart
lib/screens/: chat_screen.dart  compose_screen.dart  contact_picker.dart  home_shell.dart  identity_screen.dart  inbox_screen.dart  nfc_screen.dart  onboarding_screen.dart  qr_scan_screen.dart  radar_screen.dart  settings_sheet.dart
lib/services/: mesh_controller.dart
lib/state/: store.dart
lib/theme/: gossamer_theme.dart
native/: Cargo.toml
native/src/: api.rs  lib.rs  main.rs
native/src/core/: crypto.rs  db.rs  mesh.rs  mod.rs  net.rs  state.rs  types.rs
