[package]
name = "native"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "1.82.6"
anyhow = "1.0"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
sha2 = "0.10"
hmac = "0.12"
hkdf = "0.12"
chacha20poly1305 = "0.10"
argon2 = "0.5"
base64 = "0.21"
hex = "0.4"
