[package]
name = "native"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "1.82.6"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.29", features = ["bundled-sqlcipher"] }
rand = "0.8"
sha2 = "0.10"
hmac = "0.12"
hkdf = "0.12"
chacha20poly1305 = "0.10"
argon2 = "0.5"
base64 = "0.21"
hex = "0.4"
# Specific version compatible with nostr protocol
secp256k1 = { version = "0.27", features = ["rand", "serde", "global-context", "recovery"] }
# WebSocket for Nostr
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = "0.3"
url = "2.4"
uuid = { version = "1.4", features = ["v4"] }
bincode = "1.3"
md5 = "0.7"
md5 = "0.7"
