[package]
name = "native"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "1.82.6"
anyhow = "1.0"
# Tokio: Full features for async runtime
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# SQLite: Bundled to avoid Android SSL/Linker issues
rusqlite = { version = "0.29", features = ["bundled"] }
rand = "0.8"
sha2 = "0.10"
hmac = "0.12"
hkdf = "0.12"
chacha20poly1305 = "0.10"
argon2 = "0.5"
base64 = "0.21"
hex = "0.4"
# Secp256k1: Recovery needed for some Nostr ops, global-context for speed
secp256k1 = { version = "0.27", features = ["rand", "serde", "global-context", "recovery"] }
# Rustls: Critical for Android networking (no OpenSSL dep)
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
url = "2.4"
uuid = { version = "1.4", features = ["v4"] }
bincode = "1.3"
md5 = "0.7"
